--- a/css/etc-main.css
+++ b/css/etc-main.css
@@ -1,6 +1,17 @@
+#custom_etc_widget .postbox-header{
+	border: 8px solid #F6F61A;
+}
+
 .post-item {
 	padding: 10px;
+	margin: 10px 0;
+	transition: all .5s ease;
 }
+
+.post-item:hover {
+	transform: scale(1.02);
+}
+
 
 .alert {
 	border: 3px solid red;
